<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League"
            android:id="@+id/league_textview"
            android:contentDescription="@string/league_txt_cd"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textSize="@dimen/League"
            android:textColor="@android:color/black"
            android:id="@+id/matchday_textview"
            android:contentDescription="@string/matchday_txt_cd"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/share_text"
            android:id="@+id/share_button"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:contentDescription="@string/share_btn_cd"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/addwidget_text"
            android:id="@+id/addwidget_button"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:contentDescription="@string/towidget_btn_cd"/>
    </LinearLayout>

</LinearLayout>