<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/list_horizonal_matgin"
    android:layout_marginRight="@dimen/list_horizonal_matgin"
    android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLayout1"
    tools:context=".WidgetConfigurationActivity">
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id = "@+id/match_update_button"
        android:text="Refresh"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="5dp"
        android:layout_below="@id/match_update_button"
        android:background="#fc0f1116">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/TeamNames"
                android:gravity="center"
                android:id="@+id/home_name"
                android:contentDescription="@string/home_txt_cd"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/no_data"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/Score"
                android:id="@+id/score_textview"
                android:contentDescription="@string/score_txt_cd"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add_one_pls"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="12sp"
                android:id="@+id/data_textview"
                android:contentDescription="@string/data_txt_cd"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/TeamNames"
                android:id="@+id/away_name"
                android:contentDescription="@string/away_txt_cd"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>